bye jquery & start SPA

--- a/programming/index.html
+++ b/programming/index.html
@@ -104,10 +104,6 @@ h2 {margin-top: 0px}
             <img src="https://www.python.org/static/favicon.ico">
             <span class="python">python</span>
         </a>
-        <a href="https://golang.org/" target="_blank">
-            <img src="https://golang.org/favicon.ico">
-            <span>Go</span>
-        </a>
     </nav>
 
 <article>
@@ -148,7 +144,14 @@ h2 {margin-top: 0px}
             unsplash.com</a><br>
         <a href="https://icons8.com"><img
                 src="https://photos.icons8.com/vue-static/moose/favs/favicon.ico"> icons8.com</a><br>
-        <a href="https://dribbble.com/search?q=cards">dribbble.com</a>
+        <a href="https://dribbble.com/search?q=cards">dribbble.com</a><br>
+        <a href="https://coolors.co">coolors.co</a>
+        <a href="https://color.adobe.com">color.adobe.com</a>
+        <a href="https://clrs.cc">clrs.cc</a>
+        <a href="https://flatuicolors.com">flatuicolors.com</a>
+        <a href="https://colordrop.io">colordrop.io</a>
+    <li><a href="https://www.webfx.com/web-design/color-picker/">color-picker</a></li>
+    <li><img src="https://static.tildacdn.com/img/tildafavicon.ico" alt=""> <a href="https://tilda.cc/ru/">tilda.cc</a></li>
     </ul>
 </div>
 
@@ -262,15 +265,16 @@ create .gitignore /tmp
 <div class="img32">
     <h2>инструменты Web</h2>
     <ul>
-<li>
-    <a href="https://www.mozilla.org/en-US/firefox/developer/"><img src="https://www.mozilla.org/media/img/firefox/developer/favicon.011de08ab1e4.png" title="firefox"></a> 
-    <a href="https://download-chromium.appspot.com"><img src="https://download-chromium.appspot.com/favicon.ico" title="chromium"></a> 
-    <a href="https://www.google.com/chrome/canary/"><img src="../icons/chrome-canary-logo.svg" title="chrome canary"></a> 
+<li>browser:
+    <a href="https://www.mozilla.org/en-US/firefox/developer/"><img src="https://www.mozilla.org/media/img/firefox/developer/favicon.011de08ab1e4.png" title="firefox"></a>
+    <a href="https://download-chromium.appspot.com"><img src="https://download-chromium.appspot.com/favicon.ico" title="chromium"></a>
+    <a href="https://www.google.com/chrome/canary/"><img src="../icons/chrome-canary-logo.svg" title="chrome canary"></a>
 </li>
-<li>
-    <a href="https://www.sublimetext.com"><img src="https://www.sublimetext.com/favicon.ico" alt="Sublime Text"> Sublime Text</a>, 
-    <a href=""><img src="https://upload.wikimedia.org/wikipedia/commons/9/9a/Visual_Studio_Code_1.35_icon.svg" alt=""> VS Code</a>, <a href="https://codekitapp.com/">CodeKit</a>, 
-    <a href="https://www.jetbrains.com/phpstorm/documentation/phpstorm-video-tutorials.html"><img src="https://www.jetbrains.com/safari-pinned-tab.svg"> jetbrains.com</a> <a href="https://jetbrains.ru/products/phpstorm/">jetbrains.ru</a>
+<li>codEditor:
+    <a href="https://code.visualstudio.com/"><img src="https://upload.wikimedia.org/wikipedia/commons/9/9a/Visual_Studio_Code_1.35_icon.svg" title="VS Code"></a>
+    <a href="https://notepad-plus-plus.org/"><img src="https://notepad-plus-plus.org/images/logo.svg" title="notepad++"></a>
+    <a href="https://www.jetbrains.com/idea/"><img src="../icons/IntelliJ.svg"></a>
+    <a href="https://www.sublimetext.com"><img src="https://www.sublimetext.com/favicon.ico" title="Sublime Text"></a>
 </li>
     sublimeText: .container>.header(>h1{Hello W})+.content>ul>li*5({item$}) <br>
 <li></li>
@@ -321,6 +325,12 @@ module.exports = {
 </div>
 
 <div>
+    <a href="https://golang.org/"><img src="https://golang.org/favicon.ico"> Golang</a><br>
+    <a href="https://www.rust-lang.org/"><img src="https://www.rust-lang.org/static/images/favicon-32x32.png" alt=""> Rust</a><br>
+    <a href="https://www.haskell.org/"><img src="https://www.haskell.org/img/favicon.ico" alt=""> Haskell</a><br>
+</div>
+
+<div>
     <ul>
     <li>docker</li>
     <li>browserslist</li>
@@ -337,9 +347,7 @@ module.exports = {
     <li><a href="http://www.udacity.com"><img src="https://www.udacity.com/favicon.ico"> udacity.com</a></li>
     <li><a href="https://betaagency.ru/">Beta</a></li>
     <li><a href="https://10fastfingers.com/">10fastfingers.com</a></li>
-    <li><a href="https://www.webfx.com/web-design/color-picker/">color-picker</a></li>
     <li><a href="https://opensource.facebook.com/">opensource.facebook</a></li>
-    <li><img src="https://static.tildacdn.com/img/tildafavicon.ico" alt=""> <a href="https://tilda.cc/ru/">tilda.cc</a></li>
     <li><img src="https://wordpress.org/favicon.ico" alt=""> <a href="https://wordpress.org">WordPress.org</a></li>
     <li><a href="https://www.codecademy.com">codecademy.com</a></li>
     <li><a href="https://ru.hexlet.io">ru.hexlet.io</a></li>
