--- a/programming/react.html
+++ b/programming/react.html
@@ -7,8 +7,6 @@
   <link rel="SHORTCUT ICON" href="../icons/favicon.ico">
   <link rel="stylesheet" href="../CSS/leonardasf1.css">
 
-    <script src="../JS/jquery.js"></script>
-    <script src="../JS/leoscript.js" defer></script>
 <style>
 
 	article {padding: 3%}
@@ -30,13 +28,15 @@
     </div>
   </header>
 
+<script src="../JS/leoscript.js" defer></script>
+
 <div id="links">
     <a href="https://reactjs.org/"><img src="../icons/react.svg" alt="reactjs.org"></a>
     <a href="https://github.com/facebook/react"><img src="https://github.githubassets.com/favicon.ico" alt="GitHub"></a>
+    <a href="https://nextjs.org/"><img src="https://nextjs.org/static/favicon/favicon-32x32.png" alt="next.js"></a>
 </div>
 
         <article style="display: flex; background-color: rgba(0,0,0,0.2)">
-        	<a href="https://itvdn.com"><img src="https://itvdn.com/Content/img/header/logo.svg" height="50px"></a>
         	<div>
         		<a href="https://itvdn.com/ru/video/react-js-essential">ReactJS Essential</a>
         		<ul>
