--- a/index.html
+++ b/index.html
@@ -2,48 +2,99 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-  <meta http-equiv="refresh" content="0;../programming/">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leonardasf1.github.io</title>
-  <link rel="SHORTCUT ICON" href="CSS/favicon.ico">
+  <link rel="SHORTCUT ICON" href="icons/favicon.ico">
   <link rel="stylesheet" href="CSS/leonardasf1.css">
-<style>
-  .slide img {
-    width: 100%; 
-  }
-</style>
+<style></style>
 
-<script src="https://code.jquery.com/jquery-3.3.1.js"></script>
-<script src="JS/leoscript.js" defer></script>
+<script src="JS/base.js"></script>
 
 </head>
 
 <body>
-<div class="box-wrapper">
   
-  <header>
+<header>
     <div id="headerMenu">
       <div>
         <span class="prelogo">Leonardasf1.github.io</span>
       </div>
     </div>
-  </header>
+</header>
 
-  <div class="content">
-<!--    <div class="slide" style="display: grid; grid-template-columns: repeat(2, 1fr); grid-gap: 20px;">
+<div id="links"></div>
+
+<content>
+<!--    <div style="display: grid; grid-template-columns: repeat(2, 1fr); grid-gap: 20px;">
       <img src="F1_Challenge/1983/1983.jpg">
       <img src="Alpinism/DSC03909.jpg">
       <img src="sailing/sailboats/cutter93-37/Moonbeam-3/m6.jpg">
       <img src="flamenco/flam.jpg"> 
       <img src="13dospeh/med.jpg"> 
     </div>  -->
-  </div>
+</content>
 
-  <div class="footer">
-    <div class="inner-footer">
-      <div class="copy">2019 © Copyright leonardasf1. All Right Reserved.</div>
-    </div>
-  </div>
-</div>
+<footer></footer>
 
+<script>
+const v = function (id) {return document.querySelector(id);};
+const vall = function (id) {return document.querySelectorAll(id);};
+
+v('#headerMenu').insertAdjacentHTML('beforeend', headerMenuB);
+
+v("body").insertAdjacentHTML('beforeend', 
+   `<div id="footerScrollTop">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
+            <path fill="currentColor" d="M177 159.7l136 136c9.4 9.4 9.4 24.6 0 33.9l-22.6 22.6c-9.4 9.4-24.6 9.4-33.9 0L160 255.9l-96.4 96.4c-9.4 9.4-24.6 9.4-33.9 0L7 329.7c-9.4-9.4-9.4-24.6 0-33.9l136-136c9.4-9.5 24.6-9.5 34-.1z"></path>
+        </svg>
+    </div>`
+);
+window.onscroll = function () {
+    let scrolled = this.scrollY;
+    if (scrolled > 50) {
+        headerMenu.style.padding = "2px 3%";
+    }
+    if (scrolled < 51) {
+        headerMenu.style.padding = "31px 3%";
+    }
+    if (scrolled > 1200) {
+        footerScrollTop.style.right = "22px";
+    }
+    if (scrolled < 1000) {
+        footerScrollTop.style.right = "-52px";
+    }
+};
+
+
+    // $(".slide").click(function () {
+    //      $(this).nextAll().slideToggle(500);
+    // });
+
+footerScrollTop.addEventListener("click", function () {
+    window.scroll(0, 0);
+});
+
+v('footer').insertAdjacentHTML('beforeend', `<div>${document.lastModified} </div>`);
+
+for (let i in vall("details")) {
+    vall('details')[i].ontoggle = function () {
+        this.firstChild.classList.toggle('hover');
+    }
+};
+
+for (let i in vall('.item')) {
+    vall('.item')[i].onclick = function () {
+        this.nextElementSibling.classList.toggle('slideT');
+        this.nextElementSibling.addEventListener("mouseleave", function () {
+            this.classList.remove('slideT');
+        });
+    }
+};
+
+for (let i in vall("article a, #links a")) {
+    vall("article a, #links a")[i].setAttribute("target", "_blank");
+};
+
+</script>
 </body>
 </html>
