--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="CSS/leonardasf1.css">
 <style></style>
 
-<script src="JS/base.js"></script>
+<script src="JS/base.js" type="module"></script>
 
 </head>
 
@@ -22,7 +22,9 @@
     </div>
 </header>
 
-<div id="links"></div>
+<div id="links">
+  <a href="https://reactjs.org/"><img src="icons/react.svg" alt="reactjs.org"></a>
+</div>
 
 <content>
 <!--    <div style="display: grid; grid-template-columns: repeat(2, 1fr); grid-gap: 20px;">
@@ -37,63 +39,7 @@
 <footer></footer>
 
 <script>
-const v = function (id) {return document.querySelector(id);};
-const vall = function (id) {return document.querySelectorAll(id);};
 
-v('#headerMenu').insertAdjacentHTML('beforeend', headerMenuB);
-
-v("body").insertAdjacentHTML('beforeend', 
-   `<div id="footerScrollTop">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
-            <path fill="currentColor" d="M177 159.7l136 136c9.4 9.4 9.4 24.6 0 33.9l-22.6 22.6c-9.4 9.4-24.6 9.4-33.9 0L160 255.9l-96.4 96.4c-9.4 9.4-24.6 9.4-33.9 0L7 329.7c-9.4-9.4-9.4-24.6 0-33.9l136-136c9.4-9.5 24.6-9.5 34-.1z"></path>
-        </svg>
-    </div>`
-);
-window.onscroll = function () {
-    let scrolled = this.scrollY;
-    if (scrolled > 50) {
-        headerMenu.style.padding = "2px 3%";
-    }
-    if (scrolled < 51) {
-        headerMenu.style.padding = "31px 3%";
-    }
-    if (scrolled > 1200) {
-        footerScrollTop.style.right = "22px";
-    }
-    if (scrolled < 1000) {
-        footerScrollTop.style.right = "-52px";
-    }
-};
-
-
-    // $(".slide").click(function () {
-    //      $(this).nextAll().slideToggle(500);
-    // });
-
-footerScrollTop.addEventListener("click", function () {
-    window.scroll(0, 0);
-});
-
-v('footer').insertAdjacentHTML('beforeend', `<div>${document.lastModified} </div>`);
-
-for (let i in vall("details")) {
-    vall('details')[i].ontoggle = function () {
-        this.firstChild.classList.toggle('hover');
-    }
-};
-
-for (let i in vall('.item')) {
-    vall('.item')[i].onclick = function () {
-        this.nextElementSibling.classList.toggle('slideT');
-        this.nextElementSibling.addEventListener("mouseleave", function () {
-            this.classList.remove('slideT');
-        });
-    }
-};
-
-for (let i in vall("article a, #links a")) {
-    vall("article a, #links a")[i].setAttribute("target", "_blank");
-};
 
 </script>
 </body>
