--- a/programming/angular.html
+++ b/programming/angular.html
@@ -6,8 +6,6 @@
     <title>Angular</title>
   <link rel="SHORTCUT ICON" href="../icons/favicon.ico">
   <link rel="stylesheet" href="../CSS/leonardasf1.css">
-  <script src="../JS/jquery.js"></script>
-    <script src="../JS/leoscript.js" defer></script>
 <style>
   .prelogo {color: #e23237}
 </style>
@@ -24,6 +22,7 @@
   </div>
 </header>
 
+    <script src="../JS/leoscript.js" async></script>
 <div id="links">
   <a href="https://angular.io"><img src="https://angular.io/assets/images/favicons/favicon.ico"></a>
 
