--- a/programming/css.html
+++ b/programming/css.html
@@ -9,14 +9,10 @@
 <style>
 .h1 {font-size: 2rem}
 </style>
-    <script src="../JS/jquery.js"></script>
-    <script src="../JS/leoscript.js"></script>
 
     <link rel="stylesheet" href="../CSS/highlight.css">
     <script src="../JS/highlight.pack.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
-
-    <script async src="https://static.codepen.io/assets/embed/ei.js"></script>
 </head>
 
 <body>
@@ -29,6 +25,7 @@
 		  </div>
     </div>
   </header>
+    <script src="../JS/leoscript.js" async></script>
 
 <div id="links">
   <a href="https://drafts.csswg.org/"><img src="https://drafts.csswg.org/csslogo.ico" alt="csswg"></a>
