--- a/programming/html.html
+++ b/programming/html.html
@@ -6,8 +6,6 @@
 	<title>HTML</title>
   <link rel="SHORTCUT ICON" href="../icons/favicon.ico">
   <link rel="stylesheet" href="../CSS/leonardasf1.css">
-  <script src="../JS/jquery.js"></script>
-    <script src="../JS/leoscript.js" defer></script>
 
 </head>
 
@@ -22,6 +20,8 @@
   </div>
 </header>
 
+    <script src="../JS/leoscript.js" async></script>
+    
 <div id="links">
 	<a href="https://developer.mozilla.org/en-US/docs/Web/HTML"><img src="https://developer.mozilla.org/static/img/favicon32.7f3da72dcea1.png" alt="mozilla"></a>
   <a href="https://www.w3.org/html/"><img src="https://www.w3.org/favicon.ico" alt="w3.org"></a>
