--- a/programming/js2.html
+++ b/programming/js2.html
@@ -29,7 +29,7 @@
     </div>
 </header>
 
-<script src="../JS/leoscript.js"></script>
+<script src="../JS/leoscript.js" async></script>
 
 <div id="links">
     <a href="https://learn.javascript.ru/js"><img src="http://learn.javascript.ru/img/favicon/favicon.png" alt="learn.javascript.ru"></a>
