--- a/programming/php.html
+++ b/programming/php.html
@@ -6,8 +6,6 @@
 	<title>php</title>
   <link rel="SHORTCUT ICON" href="../icons/favicon.ico">
   <link rel="stylesheet" href="../CSS/leonardasf1.css">
-    <script src="../JS/jquery.js"></script>
-    <script src="../JS/leoscript.js"></script>
 
     <link rel="stylesheet" href="../CSS/highlight.css">
     <script src="../JS/highlight.pack.js"></script>
@@ -30,6 +28,8 @@
     </div>
 </header>
 
+    <script src="../JS/leoscript.js" async></script>
+    
 <div id="links">
   <a href="https://www.php.net/manual/ru/">php.net</a>
   <a href="http://www.php.su/learnphp/">php.su/learnphp</a>
