--- a/programming/python.html
+++ b/programming/python.html
@@ -6,8 +6,7 @@
 	<title>Python</title>
   <link rel="SHORTCUT ICON" href="../icons/favicon.ico">
   <link rel="stylesheet" href="../CSS/leonardasf1.css">
-    <script src="../JS/jquery.js"></script>
-    <script src="../JS/leoscript.js"></script>
+    <script src="../JS/leoscript.js" async></script>
 
 </head>
 
