--- a/programming/react.html
+++ b/programming/react.html
@@ -72,5 +72,6 @@
             плагин для sublimeText/packageControl/install/babel<br>
             
         </article>
+        <footer></footer>
 </body>
 </html>
