--- a/programming/vue.html
+++ b/programming/vue.html
@@ -6,8 +6,6 @@
 	<title>Vue.js</title>
   <link rel="SHORTCUT ICON" href="../icons/favicon.ico">
   <link rel="stylesheet" href="../CSS/leonardasf1.css">
-  <script src="../JS/jquery.js"></script>
-    <script src="../JS/leoscript.js"></script>
 
     <link rel="stylesheet" href="../CSS/highlight.css">
     <script src="../JS/highlight.pack.js"></script>
@@ -27,6 +25,8 @@
 		</div>
     </div>
 </header>
+
+    <script src="../JS/leoscript.js" async></script>
 
 <div id="links">
   <a href="https://vuejs.org"><img src="../icons/vue.svg"></a>
@@ -174,9 +174,6 @@ $refs.
 
   <div>
     <li><a href="https://codepen.io/leonardasf1/pen/BaBMPdW">watch phone buy</a></li>
-
-    <p><iframe scrolling="no" src="//codepen.io/jeka-muzyka/embed/rKajgM/?height=265&amp;theme-id=0&amp;default-tab=html,result&amp;embed-version=2" style="width: 100%;" title="2" height="265" frameborder="no">See the Pen 2 by Jeka Muzyka (@jeka-muzyka) on CodePen.</iframe></p>
-    <p><iframe scrolling="no" src="//codepen.io/jeka-muzyka/embed/xzbqZX/?height=265&amp;theme-id=0&amp;default-tab=html,result&amp;embed-version=2" style="width: 100%;" title="4" height="265" frameborder="no">See the Pen 4 by Jeka Muzyka (@jeka-muzyka) on CodePen.</iframe></p>
 
   </div>
 </article>
