--- a/Skateboard/index.html
+++ b/Skateboard/index.html
@@ -8,11 +8,9 @@
 <META NAME="DESCRIPTION" CONTENT="Longboard">
   <link rel="SHORTCUT ICON" href="../icons/favicon.ico">
   <link rel="stylesheet" href="../CSS/leonardasf1.css">
-    <script src="../JS/jquery.js"></script>
     <script src="../JS/leoscript.js" defer></script>
 
 <link rel="stylesheet" href="../CSS/lightbox.css">
-<script src="../JS/lightbox.js" defer></script>
 
 </head>
 
@@ -26,6 +24,7 @@
     </div>
   </div>
 </header>
+<script src="../JS/lightbox.js" async></script>
 
 <div id="links">
 
