--- a/Surf/index.html
+++ b/Surf/index.html
@@ -8,8 +8,6 @@
 <META NAME="DESCRIPTION" CONTENT="Surfing">
   <link rel="SHORTCUT ICON" href="../icons/favicon.ico">
   <link rel="stylesheet" href="../CSS/leonardasf1.css">
-    <script src="../JS/jquery.js"></script>
-    <script src="../JS/leoscript.js" defer></script>
 
 <link rel="stylesheet" href="../CSS/lightbox.css">
 <script src="../JS/lightbox.js" defer></script>
@@ -27,6 +25,7 @@
   </div>
 </header>
 
+    <script src="../JS/leoscript.js" async></script>
 <!-- <div id="links">
 
 </div>
