--- a/programming/bootstrap.html
+++ b/programming/bootstrap.html
@@ -4,6 +4,9 @@
 	<meta charset="UTF-8">
 	<title>Bootstrap</title>
 
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="SHORTCUT ICON" href="../icons/favicon.ico">
+  <link rel="stylesheet" href="../CSS/leonardasf1.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 </head>
 <body>
@@ -12,6 +15,9 @@
          
      </div>   
     </header>
+
+    <script src="../JS/leoscript.js" async></script>
+    
 	<nav></nav>
 	<main>
 		<section>
