--- a/programming/index.html
+++ b/programming/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app>
+<html lang="en">
 <head>
 	<meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -33,8 +33,7 @@ h2 {margin-top: 0px}
 
     </style>
 
-    <script src="../JS/jquery.js"></script>
-    <script src="../JS/leoscript.js"></script>
+    <script src="../JS/leoscript.js" async></script>
 </head>
 <body>
 	<header>
