--- a/programming/javascript.html
+++ b/programming/javascript.html
@@ -8,7 +8,6 @@
     <link rel="SHORTCUT ICON" href="../icons/favicon.ico">
     <link rel="stylesheet" href="../CSS/leonardasf1.css">
 
-    <script src="../JS/leoscript.js"></script>
 
     <link rel="stylesheet" href="../CSS/highlight.css">
     <script src="../JS/highlight.pack.js"></script>
@@ -29,6 +28,8 @@
 		</div>
     </div>
 </header>
+
+    <script src="../JS/leoscript.js" async></script>
 
 <div id="links">
     <a href="https://developer.mozilla.org/ru/docs/Web/JavaScript/Reference" style="background: none"><img src="https://developer.mozilla.org/static/img/favicon32.7f3da72dcea1.png" alt="mozilla"></a>
