--- a/programming/css.html
+++ b/programming/css.html
@@ -43,11 +43,10 @@
 </div>
 
 <article>
-<h1 style="text-align: center">Cascading Style Sheets</h1>
- reshadow 
- <a href="https://reshadow.dev/"><img src="https://reshadow.dev/public/favicon/favicon.ico" alt=""></a> 
- <a href="https://github.com/lttb/reshadow"><img src="https://github.githubassets.com/favicon.ico" alt=""></a>
- 
+  <br>
+reshadow
+ <a href="https://reshadow.dev/"><img src="https://reshadow.dev/public/favicon/favicon.ico" alt="reshadow.dev" height="16px"></a>
+ <a href="https://github.com/lttb/reshadow"><img src="https://github.githubassets.com/favicon.ico" alt="github.com/lttb/reshadow" height="16px"></a>
  / cssinjs / styled components / BEM (block element modifier) / CSS Modules , пропсы <br>
   <a href="http://htmlbook.ru/samcss/napisanie-effektivnogo-koda"><img src="http://htmlbook.ru/favicon.ico"> Написание эффективного кода</a><br>
   <a href="http://htmlbook.ru/samcss/kaskadirovanie">Cascading</a><br>
