--- a/programming/index.html
+++ b/programming/index.html
@@ -304,10 +304,10 @@ create .gitignore /tmp
     </ul>
     <h2>Terminal</h2>
     <pre>
-    cd E:  // переходим на нужный диск
-    cd example  // в нужную папку
-    mkdir folder  // создаем папку
-    ls  // смотреть содержимое папки
+cd E:  // переходим на нужный диск
+cd example  // в нужную папку
+mkdir folder  // создаем папку
+ls  // смотреть содержимое папки
     </pre>
 </div>
 
@@ -315,11 +315,13 @@ create .gitignore /tmp
     <a href="https://nodejs.org/en/"><img height="70px" src="https://nodejs.org/static/images/logo.svg" alt="Node.js"></a>
     <li><a href="https://ru.wikipedia.org/wiki/Node.js">Node.wiki</a></li>
     <li><a href="https://itvdn.com/ru/video/node_js">Уроки Node.js</a></li>
-    <li><a href="https://youtu.be/qQwcCS8K_K0?t=1498">Всё про Node.js. Интервью с Backend JS Developer</a></li>
+    <li><a href="https://youtu.be/qQwcCS8K_K0?t=1498">Всё про Node.js. Интервью 
+    с Backend JS Developer</a></li>
     <li><img src="https://electronjs.org/images/favicon.ico" alt=""><a href="https://electronjs.org/">electronjs</a></li>
     <pre>
 require('./name')
-global.name = name; // делает переменную глобальной
+global.name = name; 
+// делает переменную глобальной
 module.exports.name = name;
 module.exports = {
     name : name,
@@ -327,7 +329,8 @@ module.exports = {
 };
 .on('event', func);
 .addListener('event', func);
-.once('event', func);  // обработчик сработает один раз
+.once('event', func);  
+// обработчик сработает один раз
     </pre>
 </div>
 
