--- a/programming/css.html
+++ b/programming/css.html
@@ -450,10 +450,9 @@ page-break-inside
   scroll-snap-stop: normal; always;
 </div></details>
 
-<details><summary>scrollbar</summary><div>
+<details><summary>scrollbar (firefox)</summary><div>
 scrollbar-color: #201c29;
-scrollbar-width: 10px;
-scrollbar-gutter: always;
+scrollbar-width: thin;
 </div></details>
 
 <details><summary>Shapes</summary><div>
